--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -27,11 +27,19 @@ div.newsCardCard{
 
 .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
     font-family: bakh;
-    font-size: 13px;
+    font-size: 12px;
     color: #8E8E8E;  
     margin-top: 8px;
     margin-right: -2px;
 }
+
+.newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDate {
+    font-family: bakh;
+    font-size: 12px;
+    color: #00adef;
+    text-decoration: underline;
+    margin-top: 17px;
+  }
 
 
 /* tAB Responsive */
@@ -59,10 +67,15 @@ div.newsCardCard{
     }
 
     .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
-        font-size: 10.5px;
+        font-size: 9px;
         margin-top: 5px;
         margin-right: -6px;
     }
+
+    .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDate {
+        font-size: 9px;
+        margin-top: 10px;
+      }
 
 }
 
