--- a/src/components/CardInCourses/CardInCourses.css
+++ b/src/components/CardInCourses/CardInCourses.css
@@ -3,6 +3,7 @@ div.cardIncoursesCardCard{
     height:337px;
     box-shadow:0px 3px 8px 1px rgba(0,0,0,.05); 
     border-radius:10px;
+    position: relative;
 }
 
 div.cardIncoursesCardCard > .cardIncoursesCardMedia{
@@ -37,6 +38,41 @@ div.cardIncoursesCardCard > .cardIncoursesCardMedia{
     margin-right: 10px;
 }
 
+.cardIncoursesCardCard > .cardInCoursesRatNumHolder{
+    position:absolute;
+    top:0;
+    width: 215px;
+    display:flex;
+    justify-content: space-between;
+    font-family: monb;
+    font-size: 13px;
+    color: #656565;
+    padding-top: 3px;
+    text-align: center;
+}
+
+
+.cardIncoursesCardCard > .cardInCoursesRatNumHolder > div{
+    display: inline-block;
+    width:30px;
+    height:30px;
+    line-height:75px;
+}
+
+.cardIncoursesCardCard > .cardInCoursesRatNumHolder > .cardInCoursesRate{
+    background: url('./../../assets/images/CoursesCard/star.png');
+    background-size:20px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.cardIncoursesCardCard > .cardInCoursesRatNumHolder > .cardInCoursesNum{
+    background: url('./../../assets/images/CoursesCard/man.png');
+    background-size:20px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 
 /* Mobile Responsive */
 
@@ -67,6 +103,10 @@ div.cardIncoursesCardCard > .cardIncoursesCardMedia{
         margin-bottom: 0px;
         margin-top: 12px;
         margin-right: 5px;
+    }
+
+    .cardIncoursesCardCard > .cardInCoursesRatNumHolder{
+        width: 136px;
     }
 
 }
