--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -23,3 +23,8 @@
     font-family: monb;
     src: url(./monbaiti.ttf);
 }
+
+@font-face {
+    font-family: saye;
+    src: url(./Mj_Sayeh-1_0.TTF);
+}
