--- a/src/screens/forgotPass/ForgotPass.css
+++ b/src/screens/forgotPass/ForgotPass.css
@@ -3,7 +3,30 @@
     background: url('./../../assets/images/ForgotPass/bg.png');
     background-size: 100%;
     background-repeat: no-repeat;
+    position: relative;
 }
+
+.forgotPassHolder > .forgotPassHolderLogo {
+    height: 25px;
+    background: url("./../../assets/images/StudentPanel/logo.png");
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: right;
+    font-size: 20px;
+    font-family: arshia;
+    color: #1762bc;
+    margin-right: 0px;
+    padding: 30px 30px 30px 0;
+    letter-spacing: 0.3px;
+    position: absolute;
+    top: 0px;
+    right:40px;
+    cursor: pointer;
+  }
+  
+  .forgotPassHolder > .forgotPassHolderLogo > p{
+    margin-top: 0px;
+  }
 
 .forgotPassHolder > .forgotPassInputHolder{
     width: 405px;
@@ -94,6 +117,16 @@
 
 @media screen and (max-width:1262px){
 
+    .forgotPassHolder > .forgotPassHolderLogo {
+        padding: 15px 30px 15px 0;
+        top: 0px;
+        right:20px;
+    }
+
+    .forgotPassHolder > .forgotPassHolderLogo > p{
+        display: none;
+      }
+
     .forgotPassHolder > .forgotPassInputHolder{
         width: 304px;
         height: 185px;
@@ -149,6 +182,12 @@
         background: url('./../../assets/images/Register/bg2.png');
         background-size: 100%;
         background-repeat: no-repeat;
+    }
+
+    .forgotPassHolder > .forgotPassHolderLogo {
+        padding: 10px 30px 10px 0;
+        top: 0px;
+        right:10px;
     }
 
     .forgotPassHolder > .forgotPassInputHolder{
