--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -34,6 +34,7 @@
 }
 
 .header1 > .headerNavbar > p {
+  transition: .3s;
   cursor: pointer;
   display: inline-block;
   font-size: 17px;
@@ -43,7 +44,7 @@
 
 .header1 > .headerNavbar > p:nth-child(1) {
   cursor: default;
-  font-size: 20px;
+  font-size: 17px;
   color: #043d72;
   text-decoration: underline;
 }
@@ -128,6 +129,7 @@
 @media screen and (max-width: 749px) {
   .header1 {
     padding-top: 5px;
+    position: relative;
   }
 
   .header1 > .headerLogo {
@@ -148,6 +150,7 @@
     margin:0;
     overflow: hidden;
     opacity: 0;
+    background-color:white;
   }
 
   .header1 > .headerNavbar > p:hover{
