--- a/src/components/HomeIdeas/HomeIdeas.css
+++ b/src/components/HomeIdeas/HomeIdeas.css
@@ -19,8 +19,21 @@
     box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, .08);
     border-radius: 15px;
     margin-right: 238px;
-    padding-top: 23px;
+    padding-top: 25px;
     background: white;
+}
+
+.ideaCantainer>div.ideaInput > .ideaInputName{
+    margin-right: 25px;
+}
+
+.ideaCantainer>div.ideaInput > .ideaInputEmail{
+    margin-right: 25px;
+}
+
+.ideaCantainer>div.ideaInput > .ideaInputMessage{
+    margin-right: 25px;
+    height:140px;
 }
 
 
@@ -37,7 +50,7 @@
 
     .ideaCantainer>div.ideaInput {
         margin-right: 145px;
-        padding-top: 0px
+        padding-top: 25px
     }
 }
 
@@ -52,7 +65,7 @@
 
     .ideaCantainer>div.ideaInput {
         margin-right: 57px;
-        padding-top: 0px;
+        padding-top: 25px;
     }
 }
 
