--- a/src/screens/forgotPass/ForgotPass.css
+++ b/src/screens/forgotPass/ForgotPass.css
@@ -45,8 +45,12 @@
     margin-right: 36px;
 }
 
+.forgotPassHolder > .forgotPassInputHolder > .forgotPassInputHolderReall > .forgotPassInputHolderReallInput{
+    margin-top: 64px;
+}
+
 .forgotPassHolder > .forgotPassInputHolder > .forgotPassButtonHolderReall01{
-    margin:40px 109px 20px 0;
+    margin:20px 109px 20px 0;
 }
 
 .forgotPassHolder > .forgotPassInputHolder > .forgotPassButtonHolderReall02{
@@ -123,13 +127,14 @@
         right:20px;
     }
 
+
     .forgotPassHolder > .forgotPassHolderLogo > p{
         display: none;
       }
 
     .forgotPassHolder > .forgotPassInputHolder{
         width: 304px;
-        height: 185px;
+        height: 210px;
         margin-top:65px;
         margin-right:75px;
     }
@@ -137,6 +142,10 @@
     .forgotPassHolder > .forgotPassInputHolder > .forgotPassInputHolderReall{
         margin-top:-35px;
         margin-right: 22px;
+    }
+
+    .forgotPassHolder > .forgotPassInputHolder > .forgotPassInputHolderReall > .forgotPassInputHolderReallInput{
+        margin-top: 50px;
     }
 
     .forgotPassHolder > .forgotPassInputHolder > p{
@@ -161,7 +170,7 @@
         transform: rotate(90deg);
         position:absolute;
         width: 15px;
-        top:146px;
+        top:180px;
         right:143px;
         border-width: 1.5px;
         border: .75px solid #00ADEF;
