--- a/src/screens/register/Register.css
+++ b/src/screens/register/Register.css
@@ -17,8 +17,14 @@
 }
 
 .registerHolder > .registerInputHolder > .registerInputHolderReall{
-    margin-top:-45px;
-    margin-right: 10px;
+    margin-top:-5px;
+    margin-right: 36px;
+
+    display: grid;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 75px 75px 75px;
+    grid-column-gap: 25px;
+    grid-row-gap: 12px;
 }
 
 .registerHolder > .registerInputHolder > p{
@@ -82,8 +88,14 @@
     }
 
     .registerHolder > .registerInputHolder > .registerInputHolderReall{
-        margin-top:-35px;
-        margin-right: 1px;
+        margin-top:-40px;
+        margin-right: 1px;        
+        
+        display: grid;
+        grid-template-columns: 135px 135px;
+        grid-template-rows: 75px 75px 75px;
+        grid-column-gap: 5px;
+        grid-row-gap: 3px;
     }
 
     .registerHolder > .registerInputHolder > p{
