--- a/src/screens/register/Register.css
+++ b/src/screens/register/Register.css
@@ -3,7 +3,30 @@
     background: url('./../../assets/images/Register/bg.png');
     background-size: 100%;
     background-repeat: no-repeat;
+    position: relative;
 }
+
+.registerHolder > .registerHolderLogo {
+    height: 25px;
+    background: url("./../../assets/images/StudentPanel/logo.png");
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: right;
+    font-size: 20px;
+    font-family: arshia;
+    color: #1762bc;
+    margin-right: 0px;
+    padding: 30px 30px 30px 0;
+    letter-spacing: 0.3px;
+    position: absolute;
+    top: 0px;
+    right:40px;
+    cursor: pointer;
+  }
+  
+  .registerHolder > .registerHolderLogo > p{
+    margin-top: 0px;
+  }
 
 .registerHolder > .registerInputHolder{
     width: 499px;
