--- a/src/screens/register/Register.css
+++ b/src/screens/register/Register.css
@@ -39,7 +39,7 @@
     margin-right:125px;
 }
 
-.registerHolder > .registerInputHolder > .registerInputHolderReall{
+.registerHolder > .registerInputHolder > form > .registerInputHolderReall{
     margin-top:-5px;
     margin-right: 36px;
 
@@ -72,7 +72,7 @@
     margin-top: 20px;
 }
 
-.registerHolder > .registerInputHolder > .registerButtonHolderReall{
+.registerHolder > .registerInputHolder > form > .registerButtonHolderReall{
     margin-top: 40px;
     margin-right: -13px;
 }
@@ -110,7 +110,7 @@
         margin-right:75px;
     }
 
-    .registerHolder > .registerInputHolder > .registerInputHolderReall{
+    .registerHolder > .registerInputHolder > form > .registerInputHolderReall{
         margin-top:-40px;
         margin-right: 1px;        
         
@@ -128,7 +128,7 @@
         margin-right: 20px;
     }
 
-    .registerHolder > .registerInputHolder > .registerButtonHolderReall{
+    .registerHolder > .registerInputHolder > form > .registerButtonHolderReall{
         margin-top: 25px;
         margin-right: -2px;
     }
