--- a/src/components/MainbarDashboard/MainbarDashboard.css
+++ b/src/components/MainbarDashboard/MainbarDashboard.css
@@ -136,10 +136,6 @@
     margin-right: 20px;
   }
 
-  .MainbarDashboard>.MainbarDashboardActevity>.MainbarDashboardActevityContainer>div:nth-child(3) {
-    display: none;
-  }
-
   .MainbarDashboard>.MainbarDashboardCourses {
     width: 550px;
   }
@@ -163,18 +159,19 @@
   .MainbarDashboard>.MainbarDashboardCourses>.MainbarDashboardCoursesContainer {
     grid-template-columns: 173px 173px;
     padding-right: 12px;
+    overflow: overlay;
+    padding-left: 23px;
+    padding-bottom: 23px;
   }
 
-  .MainbarDashboard>.MainbarDashboardCourses>.MainbarDashboardCoursesContainer>div:nth-child(3) {
-    display: none;
-  }
-
-  .MainbarDashboard>.MainbarDashboardCourses>.MainbarDashboardCoursesContainer>div:nth-child(4) {
-    display: none;
-  }
-
-  .MainbarDashboard>.MainbarDashboardDate {
-    display: none;
+  .MainbarDashboard>.MainbarDashboardActevity>.MainbarDashboardActevityContainer {
+    grid-template-columns: 140px 140px 140px;
+    overflow: overlay;
+    padding-top: 3px;
+    padding-bottom: 23px;
+    margin-right: 1px;
+    padding-right: 8px;
+    padding-left: 10px;
   }
 
 }
@@ -235,8 +232,10 @@
 
   .MainbarDashboard>.MainbarDashboardActevity>.MainbarDashboardActevityContainer {
     grid-template-columns: 140px 140px 140px;
-    margin-right: -80px;
-    margin-top: 20px;
+    overflow: overlay;
+    /* margin-bottom: 23px; */
+    padding-bottom: 23px;
+    margin-right: 1px;
   }
 
   .MainbarDashboard>.MainbarDashboardCourses {
